[VAS-825] feat: Introduced getTemplates API and related client and unit tests
