# src/main/java/it/gov/pagopa/payment/notices/service/controller/NoticeTemplatesController.java
@@ -2,6 +2,7 @@ package it.gov.pagopa.payment.notices.service.controller;
 
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
@@ -10,6 +11,7 @@ import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import it.gov.pagopa.payment.notices.service.model.GetGenerationRequestStatusResource;
 import it.gov.pagopa.payment.notices.service.model.ProblemJson;
+import it.gov.pagopa.payment.notices.service.model.TemplateResource;
 import it.gov.pagopa.payment.notices.service.service.NoticeGenerationService;
 import it.gov.pagopa.payment.notices.service.service.NoticeTemplateService;
 import it.gov.pagopa.payment.notices.service.util.OpenApiTableMetadata;
@@ -27,6 +29,7 @@ import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.util.List;
 
 /**
  * Rest Controller containing APIs for generation request management
@@ -45,9 +48,47 @@ public class NoticeTemplatesController {
     }
 
     /**
-     *
-     * @param templateId
-     * @return
+     * Retrieve available notice templates.
+     * @return list of available templates inside the storage
+     */
+    @Operation(summary = "getTemplates",
+            description = "Return available templates for notice generation",
+            security = {@SecurityRequirement(name = "ApiKey")})
+    @OpenApiTableMetadata(readWriteIntense = OpenApiTableMetadata.ReadWrite.READ,
+            cacheable = true, external = true, internal = false)
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Return template data",
+                    content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
+                            array = @ArraySchema(schema = @Schema(implementation = TemplateResource.class)))),
+            @ApiResponse(responseCode = "400", description = "Bad Request",
+                    content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
+                            schema = @Schema(implementation = ProblemJson.class))),
+            @ApiResponse(responseCode = "401",
+                    description = "Unauthorized", content = @Content(schema = @Schema())),
+            @ApiResponse(responseCode = "403",
+                    description = "Forbidden", content = @Content(schema = @Schema())),
+            @ApiResponse(responseCode = "404", description = "Templates not found",
+                    content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
+                            schema = @Schema(implementation = ProblemJson.class))),
+            @ApiResponse(responseCode = "429",
+                    description = "Too many requests", content = @Content(schema = @Schema())),
+            @ApiResponse(responseCode = "500",
+                    description = "Service error", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
+                    schema = @Schema(implementation = ProblemJson.class))),
+            @ApiResponse(responseCode = "503",
+                    description = "Service or template table unavailable",
+                    content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
+                            schema = @Schema(implementation = ProblemJson.class)))
+    })
+    @GetMapping()
+    public List<TemplateResource> getTemplates() {
+        return noticeTemplateService.getTemplates();
+    }
+
+    /**
+     * Retrieve notice template zip, if available inside the template storage.
+     * @param templateId templateId to use for recovery
+     * @return template zipped data
      */
     @Operation(summary = "getTemplate",
             description = "Return templates",
@@ -65,7 +106,7 @@ public class NoticeTemplatesController {
                     description = "Unauthorized", content = @Content(schema = @Schema())),
             @ApiResponse(responseCode = "403",
                     description = "Forbidden", content = @Content(schema = @Schema())),
-            @ApiResponse(responseCode = "404", description = "Folder not found or unavailable for the requirer",
+            @ApiResponse(responseCode = "404", description = "Template not found",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
                             schema = @Schema(implementation = ProblemJson.class))),
             @ApiResponse(responseCode = "429",
